--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.0",
     "sequelize": "^6.32.1"
   },
